# dz_DRF_courses

./: .coverage  .env.sample  payment_fixture.json  pyproject.toml
config/: settings.py  urls.py
courses/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_course_name.py  0003_alter_lesson_course.py  0004_alter_course_name.py  0005_course_owner_lesson_owner.py  0006_subscription.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_payment_link_payment_session_id.py  0004_alter_payment_payment_date_and_more.py
